--- a/package.json
+++ b/package.json
@@ -9,45 +9,52 @@
 		"start": "vinxi start"
 	},
 	"dependencies": {
+		"@libsql/client": "^0.15.8",
 		"@radix-ui/react-slot": "^1.2.3",
-		"@tailwindcss/postcss": "^4.1.7",
-		"@tailwindcss/vite": "^4.1.7",
-		"@tanstack/react-form": "^1.11.2",
-		"@tanstack/react-query": "^5.76.1",
-		"@tanstack/react-query-devtools": "^5.76.1",
-		"@tanstack/react-router": "^1.120.5",
-		"@tanstack/react-router-devtools": "^1.120.6",
-		"@tanstack/react-router-with-query": "^1.120.5",
-		"@tanstack/react-start": "^1.120.5",
+		"@stagewise/toolbar-react": "^0.1.2",
+		"@tailwindcss/postcss": "^4.1.8",
+		"@tailwindcss/vite": "^4.1.8",
+		"@tanstack/react-form": "^1.12.0",
+		"@tanstack/react-query": "^5.79.0",
+		"@tanstack/react-query-devtools": "^5.79.0",
+		"@tanstack/react-router": "^1.120.13",
+		"@tanstack/react-router-devtools": "^1.120.13",
+		"@tanstack/react-router-with-query": "^1.120.13",
+		"@tanstack/react-start": "^1.120.13",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"dotenv": "^16.5.0",
+		"drizzle-orm": "^0.44.1",
+		"drizzle-zod": "^0.8.2",
 		"embla-carousel": "^8.6.0",
 		"embla-carousel-react": "^8.6.0",
 		"lucide-react": "^0.511.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"tailwind-merge": "^3.3.0",
-		"tw-animate-css": "^1.3.0",
+		"tw-animate-css": "^1.3.2",
 		"vinxi": "0.5.6",
-		"zod": "^3.25.17"
+		"zod": "^3.25.42"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.27.0",
-		"@types/node": "^22.15.21",
-		"@types/react": "^19.1.5",
+		"@eslint/js": "^9.28.0",
+		"@types/node": "^22.15.29",
+		"@types/react": "^19.1.6",
 		"@types/react-dom": "^19.1.5",
-		"@typescript-eslint/parser": "^8.32.1",
+		"@typescript-eslint/parser": "^8.33.0",
 		"autoprefixer": "^10.4.21",
-		"eslint": "^9.27.0",
-		"eslint-import-resolver-typescript": "^4.3.5",
+		"drizzle-kit": "^0.31.1",
+		"eslint": "^9.28.0",
+		"eslint-import-resolver-typescript": "^4.4.2",
 		"eslint-plugin-import": "^2.31.0",
 		"eslint-plugin-unused-imports": "^4.1.4",
-		"postcss": "^8.5.3",
+		"postcss": "^8.5.4",
 		"prettier": "^3.5.3",
-		"prettier-plugin-tailwindcss": "^0.6.11",
-		"tailwindcss": "^4.1.7",
+		"prettier-plugin-tailwindcss": "^0.6.12",
+		"tailwindcss": "^4.1.8",
+		"tsx": "^4.19.4",
 		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.32.1",
+		"typescript-eslint": "^8.33.0",
 		"vite-plugin-svgr": "^4.3.0",
 		"vite-tsconfig-paths": "^5.1.4"
 	}
