--- a/package.json
+++ b/package.json
@@ -1,61 +1,69 @@
 {
-	"name": "tanstack-start-example-basic",
-	"private": true,
-	"sideEffects": false,
-	"type": "module",
-	"scripts": {
-		"dev": "vinxi dev",
-		"build": "vinxi build",
-		"start": "vinxi start"
-	},
-	"dependencies": {
-		"@libsql/client": "^0.15.8",
-		"@radix-ui/react-slot": "^1.2.3",
-		"@stagewise/toolbar-react": "^0.1.2",
-		"@tailwindcss/postcss": "^4.1.8",
-		"@tailwindcss/vite": "^4.1.8",
-		"@tanstack/react-form": "^1.12.0",
-		"@tanstack/react-query": "^5.79.0",
-		"@tanstack/react-query-devtools": "^5.79.0",
-		"@tanstack/react-router": "^1.120.13",
-		"@tanstack/react-router-devtools": "^1.120.13",
-		"@tanstack/react-router-with-query": "^1.120.13",
-		"@tanstack/react-start": "^1.120.13",
-		"class-variance-authority": "^0.7.1",
-		"clsx": "^2.1.1",
-		"dotenv": "^16.5.0",
-		"drizzle-orm": "^0.44.1",
-		"drizzle-zod": "^0.8.2",
-		"embla-carousel": "^8.6.0",
-		"embla-carousel-react": "^8.6.0",
-		"lucide-react": "^0.511.0",
-		"react": "^19.1.0",
-		"react-dom": "^19.1.0",
-		"tailwind-merge": "^3.3.0",
-		"tw-animate-css": "^1.3.3",
-		"vinxi": "0.5.6",
-		"zod": "^3.25.46"
-	},
-	"devDependencies": {
-		"@eslint/js": "^9.28.0",
-		"@types/node": "^22.15.29",
-		"@types/react": "^19.1.6",
-		"@types/react-dom": "^19.1.5",
-		"@typescript-eslint/parser": "^8.33.0",
-		"autoprefixer": "^10.4.21",
-		"drizzle-kit": "^0.31.1",
-		"eslint": "^9.28.0",
-		"eslint-import-resolver-typescript": "^4.4.2",
-		"eslint-plugin-import": "^2.31.0",
-		"eslint-plugin-unused-imports": "^4.1.4",
-		"postcss": "^8.5.4",
-		"prettier": "^3.5.3",
-		"prettier-plugin-tailwindcss": "^0.6.12",
-		"tailwindcss": "^4.1.8",
-		"tsx": "^4.19.4",
-		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.33.0",
-		"vite-plugin-svgr": "^4.3.0",
-		"vite-tsconfig-paths": "^5.1.4"
-	}
+    "name": "tanstack-start-example-basic",
+    "private": true,
+    "sideEffects": false,
+    "type": "module",
+    "scripts": {
+        "dev": "vinxi dev",
+        "build": "vinxi build",
+        "start": "vinxi start",
+        "db:generate": "drizzle-kit generate",
+        "db:generate:named": "drizzle-kit generate --name",
+        "db:migrate": "drizzle-kit migrate",
+        "db:push": "drizzle-kit push",
+        "db:studio": "drizzle-kit studio",
+        "db:reset": "del local.db && pnpm db:push"
+    },
+    "dependencies": {
+        "@libsql/client": "^0.15.8",
+        "@radix-ui/react-slot": "^1.2.3",
+        "@stagewise/toolbar-react": "^0.1.2",
+        "@tailwindcss/postcss": "^4.1.8",
+        "@tailwindcss/vite": "^4.1.8",
+        "@tanstack/react-form": "^1.12.0",
+        "@tanstack/react-query": "^5.79.0",
+        "@tanstack/react-query-devtools": "^5.79.0",
+        "@tanstack/react-router": "^1.120.13",
+        "@tanstack/react-router-devtools": "^1.120.13",
+        "@tanstack/react-router-with-query": "^1.120.13",
+        "@tanstack/react-start": "^1.120.13",
+        "bcryptjs": "^3.0.2",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "date-fns": "^4.1.0",
+        "dotenv": "^16.5.0",
+        "drizzle-orm": "^0.44.1",
+        "drizzle-zod": "^0.8.2",
+        "embla-carousel": "^8.6.0",
+        "embla-carousel-react": "^8.6.0",
+        "lucide-react": "^0.511.0",
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0",
+        "tailwind-merge": "^3.3.0",
+        "tw-animate-css": "^1.3.3",
+        "vinxi": "0.5.6",
+        "zod": "^3.25.46"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.28.0",
+        "@types/node": "^22.15.29",
+        "@types/react": "^19.1.6",
+        "@types/react-dom": "^19.1.5",
+        "@typescript-eslint/parser": "^8.33.0",
+        "autoprefixer": "^10.4.21",
+        "drizzle-kit": "^0.31.1",
+        "eslint": "^9.28.0",
+        "eslint-import-resolver-typescript": "^4.4.2",
+        "eslint-plugin-import": "^2.31.0",
+        "eslint-plugin-unused-imports": "^4.1.4",
+        "postcss": "^8.5.4",
+        "prettier": "^3.5.3",
+        "prettier-plugin-tailwindcss": "^0.6.12",
+        "tailwindcss": "^4.1.8",
+        "tsx": "^4.19.4",
+        "typescript": "^5.8.3",
+        "typescript-eslint": "^8.33.0",
+        "vite-plugin-svgr": "^4.3.0",
+        "vite-tsconfig-paths": "^5.1.4"
+    }
 }
